# esphomeapi-rs

./: Cargo.toml  generate.sh
examples/: echo.rs
proto/: api_options.proto
proto/esphome/: api.proto
src/: client.rs  connection.rs  lib.rs  message.rs
